--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,3 @@
-/* you will add css rules for element selectors and IDs */
 html {
   font-size: 100%;
   box-sizing: border-box;
@@ -8,63 +7,45 @@ html {
   box-sizing: inherit;
 }
 
-/* you may add to or change the body rule */
 body {
-    font-family: sans-serif;
-    color: #fff;
-    background: #000;
-    margin: 0;
-}
-
-.container {
-    width: 100%; /* DO NOT delete or change this line */
-}
-
-header {
-  display: flex;
-  padding: 1rem 2rem 1rem 2rem;
-  background: #282828;
-}
-
-article {
-  display: flex;
+  background: #ffecbf;
   color: #000;
-  padding: 50px 0 50px 0;
-  justify-content: center;
-}
-
-section {
-  max-width: 600px;
-  flex: 1 1 0;
-}
-
-section.text {
-  padding: 0 2rem 0 1rem;
-  line-height: 2rem;
-  font-size: 1rem;
-}
-
-section.charts {
-  padding: 0 1rem 0 2rem;
-}
-
-section h2 {
+  font-family: 'Verdana', sans-serif;
+  font-size: 1.2rem;
   margin: 0;
 }
 
-#analysis {
-  background: #d3d3d3;
-}
-
-footer {
+header p {
   text-align: center;
-  padding: 15px;
-  background: #282828;
 }
 
-/* --- link pseudo classes --- */
-/* --- you may ADD other link pseudo classes for
-        specific articles or sections to improve CONTRAST --- */
+h1 {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+
+#container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  padding: 1rem;
+  max-width: 700px;
+}
+
+.map {
+  height: 400px;
+  width: 100%;
+  box-shadow: rgba(0, 0, 0, 0.50) 0px 5px 10px;
+  margin: 0;
+}
+
+.description {
+  width: 100%;
+  line-height: 2rem;
+}
 
 a {
     color: #004A9E;
@@ -73,4 +54,25 @@ a {
 a:hover {
     color: #0077FF;
     text-decoration: none;
+}
+
+@media screen and (max-width: 650px) {
+  #container {
+    padding: 1rem 0 1rem 0;
+  }
+
+  header {
+    padding: 1rem 1rem 0 1rem;
+  }
+
+  .description {
+    padding: 1rem;
+  }
+
+  .map {
+    height: 600px;
+    width: 100%;
+    margin-top: 3rem;
+    box-shadow: rgba(0, 0, 0, 0.50) 0px 5px 10px;
+  }
 }
