--- a/styles/main.css
+++ b/styles/main.css
@@ -10,8 +10,8 @@ html {
 body {
   background: #ffecbf;
   color: #000;
-  font-family: 'Verdana', sans-serif;
-  font-size: 1.2rem;
+  font-family: 'Open Sans', 'Trebuchet MS', sans-serif;
+  font-size: 1.5rem;
   margin: 0;
 }
 
@@ -44,7 +44,7 @@ h1 {
 
 .description {
   width: 100%;
-  line-height: 2rem;
+  line-height: 3rem;
 }
 
 a {
@@ -65,8 +65,8 @@ a:hover {
     padding: 1rem 1rem 0 1rem;
   }
 
-  .description {
-    padding: 1rem;
+  p {
+    padding: 0 1rem 0 1rem;
   }
 
   .map {
